--- a/src/app/shared/frontend/header/header.component.html
+++ b/src/app/shared/frontend/header/header.component.html
@@ -32,7 +32,7 @@
         <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
       </ul>
-      <i class="bi bi-list mobile-nav-toggle"></i>
+      <i class="bi bi-list mobile-nav-toggle" (click)="openmenu()"></i>
     </nav>
     <!-- .navbar -->
 
