--- a/src/app/pages/frontend/home/home.component.html
+++ b/src/app/pages/frontend/home/home.component.html
@@ -9,38 +9,30 @@
           <div class="mb-4">
             <h1 class="text-primary">SWC</h1>
             <h4 class="m-0 p-0">Service Web Consultant</h4>
-            <small
-              >ทีมงานมืออาชีพ ประสบการณ์มากกว่า 5 ปี
-              <span class="text-primary">++</span></small
-            >
+            <h3 class="fw-bold mt-2">
+              ทีมงานมืออาชีพ ประสบการณ์มากกว่า 5 ปี
+              <span class="text-primary">++</span>
+            </h3>
           </div>
           <ul>
             <li class="text-uppercase">
-              <span class="text-primary">ออกแบบเว็บไซต์</span> | Ux & Ui
+              <span class="text-primary">ออกแบบเว็บไซต์</span>
             </li>
             <li class="text-uppercase">
-              <span class="text-primary">เขียนระบบ</span> | Service & System
+              <span class="text-primary">เขียนระบบ</span>
             </li>
             <li class="text-uppercase">
-              <span class="text-primary">เขียนบทความ</span> | SEO
+              <span class="text-primary">เขียนบทความ</span>
             </li>
             <li class="text-uppercase">
-              <span class="text-primary">ยิงโฆษณา</span> | FaceBook & LINE
-              EXPERT
+              <span class="text-primary">การตลาดออนไลน์</span>
             </li>
             <li class="text-uppercase">
-              <span class="text-primary">ออกแบบ API JSON</span> | API GATE-WAY
-            </li>
-            <li class="text-uppercase">
-              <span class="text-primary">สำรวจการตลาด</span> | OnlineForm
-            </li>
-            <li class="text-uppercase">
-              <span class="text-primary">สถิติและข้อมูล</span> | BigData
+              <span class="text-primary">ออกแบบ API JSON</span>
             </li>
           </ul>
-          <a href="#about" class="btn-get-started rounded-lg scrollto"
-            >สอบถามข้อมูล</a
-          >
+          <a href="https://web.facebook.com/SeniorWebConsultant" class="btn-get-started rounded-lg scrollto"
+            >สอบถามข้อมูล</a>
         </div>
       </div>
       <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
@@ -64,10 +56,14 @@
           data-aos="fade-left"
         >
           <div class="content pt-4 pt-lg-0">
-            <h3>บริการของ SWC เหมาะกับใคร?</h3>
+            <h3>
+              บริการของ <span class="text-primary">SWC</span> เหมาะกับใคร?
+            </h3>
             <!-- <p class="fst-italic">
               หากคุณกำลังมองหาเว็บไซต์เป็นของตัวเองหรือองค์กร
+              
             </p> -->
+            <br />
             <ul>
               <li>
                 <i class="bi bi-check-circle"></i> ธุรกิจที่ต้องการ Scale-up
@@ -206,10 +202,7 @@
       </div>
 
       <div class="row">
-        <div
-          class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
-          data-aos="zoom-in"
-        >
+        <div class="col-md-6 col-lg-3 mb-5 mb-lg-0" data-aos="zoom-in">
           <div class="icon-box icon-box-pink h-100">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
             <h4 class="title"><a href="">support</a></h4>
@@ -218,7 +211,7 @@
         </div>
 
         <div
-          class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
+          class="col-md-6 col-lg-3 mb-5 mb-lg-0"
           data-aos="zoom-in"
           data-aos-delay="100"
         >
@@ -230,7 +223,7 @@
         </div>
 
         <div
-          class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
+          class="col-md-6 col-lg-3 mb-5 mb-lg-0"
           data-aos="zoom-in"
           data-aos-delay="200"
         >
@@ -535,16 +528,12 @@
     <div class="container">
       <div class="row" data-aos="zoom-in">
         <div class="col-lg-9 text-center text-lg-start">
-          <h3>Call To Action</h3>
-          <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
-          </p>
+          <h3>063-674-9204</h3>
+          <p>ปรึกษา-สอบถามข้อมูลเพิ่มเติมสามารถ</p>
         </div>
         <div class="col-lg-3 cta-btn-container text-center">
-          <a class="cta-btn align-middle" href="#">Call To Action</a>
+          <a class="cta-btn align-middle" href="#">LINE</a>
+          <a class="cta-btn align-middle" href="#">facebook</a>
         </div>
       </div>
     </div>
